--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="img/storage_1.JPG" alt="storage_photo_cars" width="800" height="417">
+                            <img src="img/storage_1.jpg" alt="storage_photo_cars" width="800" height="417">
                           </div>
 
                           <div class="item">
-                            <img src="img/storage_2.JPG" alt="storage_photo_boats" width="800" height="417">
+                            <img src="img/storage_2.jpg" alt="storage_photo_boats" width="800" height="417">
                           </div>
 
                           <div class="item">
@@ -235,7 +235,7 @@
                           </div>
 
                           <div class="item">
-                            <img src="img/storage_6.jpg" alt="storage_photo_boats" width="800" height="417">
+                            <img src="img/storage_6.JPG" alt="storage_photo_boats" width="800" height="417">
                           </div>
 
                         </div>
@@ -290,7 +290,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/lockedupstorage@meta.ua" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -423,7 +423,7 @@
 
     <!-- Mail sanding core -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="js/contact_me1.js"></script>
 
     <!-- Custom js -->
     <script>
