--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10">
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/lockedupstorage@meta.ua" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/lockedupstorage@meta.ua" method="POST" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
