--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10">
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/lockedupstorage@meta.ua" method="POST" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -423,7 +423,7 @@
 
     <!-- Mail sanding core -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me1.js"></script>
+    <script src="js/contact_me.js"></script>
 
     <!-- Custom js -->
     <script>
