custom domain configuration
+new email

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a href="tel://0401275126"> <i class="fa fa-phone fa-lg nav-padding"></i>0401275126</a>
                     </li>
                     <li class="medium-screen-hide">
-                        <a href="mailto:nckhoury@hotmail.com"><i class="fa fa-envelope-o fa-lg nav-padding"></i>nckhoury@hotmail.com</a>
+                        <a href="mailto:lockdupstorage@gmail.com"><i class="fa fa-envelope-o fa-lg nav-padding"></i>lockdupstorage@gmail.com</a>
                     </li>
                 </ul>
             </div>
@@ -330,7 +330,7 @@
                            <hr>
                            <i class="fa fa-phone fa-lg"></i><p class="element">0401275126</p>
                            
-                           <i class="fa fa-envelope-o fa-lg"></i><p class="element email-font">nckhoury@hotmail.com</p>
+                           <i class="fa fa-envelope-o fa-lg"></i><p class="element email-font">lockdupstorage@gmail.com</p>
                         </div>
                     </div>
                 </div>
