alteration of the site
on customers purpose

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
     <!-- includes heading text that you can turn it on -->
     <header>
         <div class="header-content">
-        <!--  <div class="header-content-inner">
-                <h1>Locked-up Storage</h1>
-                <h3>Where we treat your pride & joy like our own, so that you can store with confidence!</h3>
-                <br>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Us</a>
-            </div> -->
+         <div class="header-content-inner">
+                <!-- <h1>Locked-up Storage</h1> -->
+                <img src="img/locked-head-v7.png" alt="locked up logo" class="img-responsive">
+                <h3>Where we treat your pride & joy like our own, so that you can store with confidence.</h3>
+                <!-- <br>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Us</a> -->
+            </div>
         </div>
     </header>
     <!-- end header / intro section -->
@@ -102,8 +103,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <span class="section-heading">Storage at $150 PER WEEK or $400 PER MONTH</apsn>
-                    <button type="button" class="btn btn-default btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button>
+                    <!-- <span class="section-heading">Storage at $150 PER WEEK or $400 PER MONTH</span> -->
+                     <span class="section-heading"><span class="text-underline">Storage Unit Sizes</span> - Small (2.8 x 3.0m) Medium (3.0 x 3.0m) Large (3.6 x 3.0m) Extra Large (3.8 x 4.8m)</span>
+                   <!--  <button type="button" class="btn btn-default btn-xl" data-toggle="modal" data-target="#myModal">Learn More</button> -->
                 </div>
             </div>
         </div>
@@ -117,7 +119,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Melbourne's best choice of Vehicle Storage Service</h2>
+                    <h2 class="section-heading">Melbourne's best choice of Self Storage Service</h2>
                 </div>
             </div>
         </div>
@@ -139,9 +141,9 @@
 
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-stack-1x  fa-arrows-alt wow bounceIn text-primary"  data-wow-delay=".1s"></i>
+                            <i class="fa fa-stack-1x  fa-archive wow bounceIn text-primary"  data-wow-delay=".1s"></i>
                         </span>
-                        <h3>700 sp/m of storage</h3>
+                        <h3>50 Storage Units</h3>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 text-center extra-padding">
@@ -149,9 +151,9 @@
 
                         <span class="fa-stack fa-2x">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-stack-1x  fa-car wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                            <i class="fa fa-stack-1x  fa-suitcase wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         </span>
-                        <h3>All kind of venchiles</h3>
+                        <h3>All kind of belongings</h3>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 text-center extra-padding">
@@ -190,62 +192,73 @@
 
 
 
+
+
     <!-- about section -->
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <img src="img/logo-all.jpg" alt="" class="img-responsive head-img">
-                    <p>Where we treat your pride &amp; joy like our own, so that you can store with confidence</p>
-                    <hr class="intro">
-                </div>
+                <div class="col-lg-4 col-lg-offset-1">
+                    <div class="col-lg-12">
+                        <p class="extra-margin-top text-justify">People need storage units for all different reasons and you might be surprised to find that you need one yourself! Of course if you are moving house you will probably need to store your furniture somewhere but why else would you need one?</p>
+                        <a data-toggle="modal" data-target="#myModal">Click here to find out more ...</a>
+                    </div>
+                    <div class="col-lg-12">
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                              <li data-target="#myCarousel" data-slide-to="1"></li>
+                              <li data-target="#myCarousel" data-slide-to="2"></li>
+                              <li data-target="#myCarousel" data-slide-to="3"></li>
+                              <li data-target="#myCarousel" data-slide-to="4"></li>
+        <!--                       <li data-target="#myCarousel" data-slide-to="5"></li> -->
+                            </ol>
 
-                <div class="col-lg-4 col-lg-offset-1 ">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                          <li data-target="#myCarousel" data-slide-to="1"></li>
-                          <li data-target="#myCarousel" data-slide-to="2"></li>
-                          <li data-target="#myCarousel" data-slide-to="3"></li>
-                          <li data-target="#myCarousel" data-slide-to="4"></li>
-                          <li data-target="#myCarousel" data-slide-to="5"></li>
-                        </ol>
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+    <!--                           <div class="item active">
+                                <img src="img/storage_1.jpg" alt="storage_photo_cars" width="800" height="417">
+                              </div>
+     -->
+                              <div class="item active">
+                                <img src="img/storage_2.jpg" alt="storage_photo_boats" width="800" height="417">
+                              </div>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                          <div class="item active">
-                            <img src="img/storage_1.jpg" alt="storage_photo_cars" width="800" height="417">
-                          </div>
+                              <div class="item">
+                                <img src="img/storage_3.JPG" alt="storage_photo_cars" width="800" height="417">
+                              </div>
 
-                          <div class="item">
-                            <img src="img/storage_2.jpg" alt="storage_photo_boats" width="800" height="417">
-                          </div>
+                              <div class="item">
+                                <img src="img/storage_4.jpg" alt="storage_photo_cars" width="800" height="417">
+                              </div>
 
-                          <div class="item">
-                            <img src="img/storage_3.JPG" alt="storage_photo_cars" width="800" height="417">
-                          </div>
+                              <div class="item">
+                                <img src="img/storage_5.JPG" alt="storage_photo_outdoor" width="800" height="417">
+                              </div>
 
-                          <div class="item">
-                            <img src="img/storage_4.jpg" alt="storage_photo_cars" width="800" height="417">
-                          </div>
+                              <div class="item">
+                                <img src="img/storage_6.JPG" alt="storage_photo_boats" width="800" height="417">
+                              </div>
 
-                          <div class="item">
-                            <img src="img/storage_5.JPG" alt="storage_photo_outdoor" width="800" height="417">
-                          </div>
-
-                          <div class="item">
-                            <img src="img/storage_6.JPG" alt="storage_photo_boats" width="800" height="417">
-                          </div>
+                            </div>
 
                         </div>
-
                     </div>
                 </div>
-
-                <div class="col-lg-6 table-align text-center">
-                    <p class="table-cell-align">We provide accessible storage solutions for cars, boats, motorcycles and even caravans at our convenient location in Thornbury, which is located on the corner of Theobald and Sheppard Street. </p>
+                <div class="col-lg-7">
+                    <ul class="about-list extra-margin"><span class="text-underline">Why Choose Us</span>
+                        <li class="extra-margin">24hr CCTV - Our premises are constantly monitored by working cameras to protect your property.</li>
+                        <li>Family Run - Our staff are trustworthy, friendly, careful and experienced.</li>
+                        <li>2 point locking system - our storage units is complete with two point system for added protection.</li>
+                        <li>Industrial Quality - Our units are industrial quality for maximum peace of mind.</li>
+                        <li>Concrete Floors - No flimsy sheds or damp to ruin your belongings.</li>
+                        <li>Night Sensors – Our Storage warehouse offer night lights so you can easily access your unit at night with ease</li>
+                        <li>Storage Unit Sizes - We offer four unit sizes to cater for all and meet your storage needs.</li>
+                        <li>Customer Service - Our friendly team is always on hand to assist with your storage requirements.</li>
+                    </ul>
                 </div>
+
             </div>    
 
             <hr class="hidden-mobile">
@@ -276,7 +289,6 @@
         </div>
     </section>
     <!-- end about section -->
-
 
 
     <!-- contact section -->
@@ -357,8 +369,8 @@
                     </div>
 
                     <div class="footer-col col-md-4">
-                        <h3>About Locked Up</h3>
-                        <p>We provide accessible storage solutions for cars, boats, motorcycles and even caravans.</p>
+                        <h3 class="extra-margin">About Locked Up</h3>
+                        <p>We provide accessible storage solutions for all your items and belongings at our convenient location in Thornbury, which is located on the corner of Theobald and Sheppard Street.</p>
                     </div>
 
                 </div>
@@ -390,18 +402,24 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">$150 PER WEEK or $400 PER MONTH </h4>
+            <h4 class="modal-title">4 Reasons Why You Need A Self Storage Unit</h4>
           </div>
           <div class="modal-body">
-            <ul><span class="head-item">These prices include:</span>
-                <li class="extra-margin">- 2 point locking system to keep all safe </li>
-                <li>- 24/7 cctv surveillance </li>
-                <li>- Car cover to protect the vehicle </li>
-                <li>- Trical charger to charge the battery </li>
-                <li>- Plus vehicle washed before pickup </li>
+                <p>People need storage units for all different reasons and you might be surprised to find that you need one yourself! Of course if you are moving house you will probably need to store your furniture somewhere but why else would you need one?</p>
+            <ul><span class="head-item">Reason 1: To Reclaim Your Shed</span>
+                <li class="extra-margin">&nbsp &nbsp &nbsp &nbsp At Locked Up Storage we have many long term clients who take advantage of our low prices to free up space in their garden and reclaim their sheds! Are you fed up with all those bikes, lawn mowers, BBQs and tools making your garden look like a junk yard? Then it could be time to pop them into storage!</li>
+            </ul>
+             <ul><span class="head-item">Reason 2: To Store Childhood Stuff</span>
+                <li>&nbsp &nbsp &nbsp &nbsp Ok so your kids left home but that doesn’t mean they won’t want their stuff back at some point! Free up their old bedroom for yourself without throwing out their childhood memories and feeling guilty! Store old toys, books, furniture and clothes in a handy unit at Locked up Storage!</li>
+            </ul>
+             <ul><span class="head-item">Reason 3: To Start A Small Business</span>
+                <li>&nbsp &nbsp &nbsp &nbsp Whilst you can’t run your business from a storage unit you can use it to store all your equipment. Let’s say you are running a car garage and you want to store some excess parts or spares somewhere safe. Perhaps you have a business premises but you need a storeroom where you can pop in…Locked up Storage has you covered!</li>
+            </ul>
+             <ul><span class="head-item">Reason 4: Life Changes</span>
+                <li>&nbsp &nbsp &nbsp &nbsp We all go through changes and have to start again at some point. Whether you are downsizing from a house to an apartment following a separation or need to store items following a bereavement, Locked Up Storage can provide you with an ideal unit size for your belongings. Remember that you can rent units by the month so it’s yours for just as long as you need.</li>
             </ul>
 
-            <p class="text-black">Contact us for more information.</p>
+            <!-- <p class="text-black">Contact us for more information.</p> -->
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal" id="MyButton">Contact Us</button>
@@ -460,7 +478,7 @@
         });
     </script>
 
-
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 
 </html>
