alteration of the site 2
on customers purpose

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="tel://0401275126"> <i class="fa fa-phone fa-lg nav-padding"></i>0401275126</a>
-                    </li>
                     <li class="medium-screen-hide">
                         <a href="mailto:lockdupstorage@gmail.com"><i class="fa fa-envelope-o fa-lg nav-padding"></i>lockdupstorage@gmail.com</a>
+                    </li>
+                    <li>
+                        <a class="phone" href="tel://0401275126"> <i class="fa fa-phone fa-lg nav-padding"></i>0401275126</a>
                     </li>
                 </ul>
             </div>
@@ -88,6 +88,7 @@
          <div class="header-content-inner">
                 <!-- <h1>Locked-up Storage</h1> -->
                 <img src="img/locked-head-v7.png" alt="locked up logo" class="img-responsive">
+                <h4 class="hidden-mobile">Based in Thornbury</h4>
                 <h3>Where we treat your pride & joy like our own, so that you can store with confidence.</h3>
                 <!-- <br>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About Us</a> -->
